--- a/css/index.css
+++ b/css/index.css
@@ -166,11 +166,118 @@ header nav button {
     width: 12.5%;
     height: 100px;}*/
     
-.boxes :first-child {
-    background-color: teal;
-}
+    .boxes #box1{
+        background-color: teal;
+        margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+    }
+    
+    .boxes #box2 {
+        background-color: gold;
+        margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+    }
+    
+    .boxes #box3 {
+    background-color: cadetblue ;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    width: 12.5%;
+    height: 100px;
+    }
+    
+    .boxes #box4 {
+        background-color :coral ;
+        margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+        }
+    
+    .boxes #box5 {
+        background-color: crimson;
+        margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+        }
+    
+    .boxes #box6 {
+        background-color: forestgreen;
+        margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+        }
+    
+    .boxes #box7 {
+        background-color: darkorchid;
+        margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+        }
+    
+    .boxes #box8 {
+        background-color: hotpink;
+        margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+        }
+    
+    .boxes #box9 {
+        background-color: indigo;
+        margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+        }
+    
+    .boxes #box10 {
+        background-color: dodgerblue;
+        margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
 
-.big-container2 {
+         }
+
+.big-picture2 {
     display: flex;
     padding-left: 357px;
 }
