--- a/css/index.css
+++ b/css/index.css
@@ -279,5 +279,33 @@ header nav button {
 
 .big-picture2 {
     display: flex;
-    padding-left: 357px;
+    padding:0px 0px 23px 357px;
 }
+
+    
+
+#column>* {
+    display: flex;
+    flex-flow: row wrap;
+    flex:1 1 100%;
+}
+
+.together {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+/*1. If you were to describe semantic HTML to the next cohort of students, what would you say?
+
+It gives meaning to your page. Like section, address, p,
+
+2. Name two big differences between ```display: block;``` and ```display: inline;```.
+
+display:block; is and entire block and gives you breaks and spaces in between elements. display:inline; m 
+
+3. What are the 4 areas of the box model?
+
+4. While using flexbox, what axis does the following property work on: ```align-items: center```?
+
+5. Explain why git is valuable to a team of developers.
+*/
