--- a/css/index.css
+++ b/css/index.css
@@ -336,6 +336,15 @@ header nav button {
     padding-bottom: 50px;
    
 }
+.learnmore {
+    border-radius: 4px;
+    border:2px solid black;
+    background-color: white;
+    width: 100px;
+    color: black;
+}
+
+
 
 /*1. If you were to describe semantic HTML to the next cohort of students, what would you say?
 
